--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,9 +1,11 @@
-name: Build and Push Docker Image
+name: Docker Build
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'Dockerfile'
 
 env:
   REGISTRY: ${{ secrets.DOCKERHUB_USERNAME }}
