--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 /output
+/.asset-path*
+/to-render/libraries/*
+/to-render/tests/*
+!/to-render/tests/cube.blend
